test_case/rust-lang_rust/56479_443890304_8.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/nll/user-annotations/patterns.rs","byte_start":266,"byte_end":268,"line_start":16,"line_end":16,"column_start":9,"column_end":11,"is_primary":true,"text":[{"text":"    y = &x; //~ ERROR","highlight_start":9,"highlight_end":11}],"label":"borrowed value does not live long enough","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/nll/user-annotations/patterns.rs","byte_start":280,"byte_end":281,"line_start":17,"line_end":17,"column_start":1,"column_end":2,"is_primary":false,"text":ncreated. So to fix the previous example, just make the `y` lifetime greater than\nthe `x`'s one:\n\n